RESOLVED FIXED28017
box-shadow's spread is ignored with <table>
https://bugs.webkit.org/show_bug.cgi?id=28017
Summary box-shadow's spread is ignored with <table>
Shinichiro Hamaji
Reported 2009-08-05 05:57:55 PDT
Created attachment 34132 [details] Test case The change for Bug 27811 is needed for RenderTable as well. See the test case. I'll send a patch soon later.
Attachments
Test case (1.44 KB, text/html)
2009-08-05 05:57 PDT, Shinichiro Hamaji
no flags
Patch v1 (6.34 KB, patch)
2009-08-05 06:03 PDT, Shinichiro Hamaji
no flags
Patch v2 (7.87 KB, patch)
2009-08-06 17:51 PDT, Shinichiro Hamaji
no flags
Patch v3 (8.03 KB, patch)
2009-08-06 18:01 PDT, Shinichiro Hamaji
no flags
Patch v4 (7.95 KB, patch)
2009-08-06 20:29 PDT, Shinichiro Hamaji
abarth: commit-queue+
Shinichiro Hamaji
Comment 1 2009-08-05 06:03:00 PDT
Created attachment 34133 [details] Patch v1 --- 6 files changed, 164 insertions(+), 7 deletions(-)
Eric Seidel (no email)
Comment 2 2009-08-06 14:46:21 PDT
Comment on attachment 34133 [details] Patch v1 If you're going to edit the generated template like this, you need to also modify make-js-test-wrappers so ignore your .js file so that it doens't try to re-gen a new version every time someone else runs make-js-test-wrappers. (Yes, I know this is all very poorly documented.) Seems silly to leave this in the output: You should see no red. 16 div: 17 18 flexbox: 19 20 table: 21 If you wrap it all in a div, you can easily remove that div before ending your script. Otherwise the change looks fine to me. r- for those nits.
Shinichiro Hamaji
Comment 3 2009-08-06 17:51:49 PDT
Created attachment 34237 [details] Patch v2 --- 8 files changed, 160 insertions(+), 7 deletions(-)
Shinichiro Hamaji
Comment 4 2009-08-06 18:01:27 PDT
Created attachment 34239 [details] Patch v3 --- 8 files changed, 168 insertions(+), 7 deletions(-)
Shinichiro Hamaji
Comment 5 2009-08-06 18:05:36 PDT
Thanks for the quick review! I modified my patch as you commented (please just ignore Patch v2). I also modified a few things: - Change the filename of layout test. resources/overflow-scroll.js may be too general to put it into make-js-test-wrappers. - Make the color of shadow green. People may see the test is passing easily.
Eric Seidel (no email)
Comment 6 2009-08-06 18:35:35 PDT
Comment on attachment 34239 [details] Patch v3 LGTM.
Shinichiro Hamaji
Comment 7 2009-08-06 20:29:25 PDT
Created attachment 34245 [details] Patch v4 --- 8 files changed, 168 insertions(+), 7 deletions(-)
Shinichiro Hamaji
Comment 8 2009-08-06 20:31:02 PDT
Oops, I used wrong email addresses... Hmm I should check why prepare-ChangeLog obtained the addresses.
Adam Barth
Comment 9 2009-08-06 23:08:39 PDT
Comment on attachment 34245 [details] Patch v4 Presumably this patch is still ok if you only changed your email address.
Adam Barth
Comment 10 2009-08-06 23:53:17 PDT
Comment on attachment 34245 [details] Patch v4 Clearing review flag on attachment: 34245 Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog A LayoutTests/fast/box-shadow/box-shadow-overflow-scroll-expected.txt A LayoutTests/fast/box-shadow/box-shadow-overflow-scroll.html A LayoutTests/fast/box-shadow/resources/box-shadow-overflow-scroll.js M WebCore/ChangeLog M WebCore/rendering/RenderTable.cpp M WebKitTools/ChangeLog M WebKitTools/Scripts/make-js-test-wrappers Committed r46888 M WebCore/ChangeLog M WebCore/rendering/RenderTable.cpp M LayoutTests/ChangeLog A LayoutTests/fast/box-shadow/box-shadow-overflow-scroll-expected.txt A LayoutTests/fast/box-shadow/resources/box-shadow-overflow-scroll.js A LayoutTests/fast/box-shadow/box-shadow-overflow-scroll.html M WebKitTools/ChangeLog M WebKitTools/Scripts/make-js-test-wrappers r46888 = a9f708a39f4c71132e92f7d9ccb0b1d36fe62e49 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/46888
Adam Barth
Comment 11 2009-08-06 23:53:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.