2009-08-06  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Adam Barth.

        box-shadow's spread is ignored with <table>
        https://bugs.webkit.org/show_bug.cgi?id=28017

        Use RenderStyle::getBoxShadowExtent just like RenderBlock.

        * fast/box-shadow/box-shadow-overflow-scroll-expected.txt: Added.
        * fast/box-shadow/box-shadow-overflow-scroll.html: Added.
        * fast/box-shadow/resources/box-shadow-overflow-scroll.js: Added.

2009-08-06  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Adam Barth.

        box-shadow's spread is ignored with <table>
        https://bugs.webkit.org/show_bug.cgi?id=28017

        Use RenderStyle::getBoxShadowExtent just like RenderBlock.

        Test: fast/box-shadow/box-shadow-overflow-scroll.html

        * rendering/RenderTable.cpp:
        (WebCore::RenderTable::layout):

2009-08-06  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Adam Barth.

        box-shadow's spread is ignored with <table>
        https://bugs.webkit.org/show_bug.cgi?id=28017

        Use RenderStyle::getBoxShadowExtent just like RenderBlock.

        * Scripts/make-js-test-wrappers: Added regexp to skip box-shadow-overflow-scroll.js

Canonical link: https://commits.webkit.org/38491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46888 268f45cc-cd09-0410-ab3c-d52691b4dbfc